# gast

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: verify-git-commands.sh
src/: App.tsx  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/assistant/: cli.rs  ipc.rs  mod.rs  port.rs  use_case.rs
src-tauri/src/features/branch/: git_cli.rs  ipc.rs  mod.rs  model.rs  port.rs  use_case.rs
src-tauri/src/features/commit/: git_cli.rs  ipc.rs  model.rs  port.rs  use_case.rs
src-tauri/src/features/integration/: git_cli.rs  ipc.rs  model.rs  port.rs  use_case.rs
src-tauri/src/features/remote/: git_cli.rs  ipc.rs  mod.rs  model.rs  port.rs  use_case.rs
src-tauri/src/features/repo/: git_cli.rs  ipc.rs  mod.rs  model.rs  persistence.rs  port.rs  use_case.rs
src-tauri/src/features/stash/: git_cli.rs  ipc.rs  mod.rs  model.rs  port.rs  use_case.rs
src-tauri/src/features/system/: ipc.rs  mod.rs  model.rs  os.rs  port.rs  use_case.rs
src-tauri/src/features/tag/: git_cli.rs  ipc.rs  mod.rs  port.rs  use_case.rs
src-tauri/src/features/watcher/: ipc.rs  mod.rs  service.rs
src-tauri/src/features/working_tree/: git_cli.rs  ipc.rs  mod.rs  model.rs  port.rs  use_case.rs
src-tauri/src/features/worktree/: git_cli.rs  ipc.rs  mod.rs  model.rs  port.rs  use_case.rs
src-tauri/src/shared/: error.rs  mod.rs  parse.rs  runner.rs
(+105 files in other folders)
