[package]
name = "ast-git"
version = "0.1.0"
description = "Cliente Git de escritorio open source con gestión de worktrees"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ast_git_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
